bin/docker/k8s/ingestion/countly-ingestion.yaml
apiVersion: v1
kind: Service
metadata:
  name: countly-ingestion
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: countly-ingestion
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countly-ingestion-deployment
spec:
  selector:
    matchLabels:
      app: countly-ingestion
  replicas: 1
  template:
    metadata:
      labels:
        app: countly-ingestion
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: countly-ingestion
        image: countly/api:23.03
#        image: gcr.io/countly-01/api:23.03     # Countly Enterprise
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 30
