bin/docker/k8s/ingestion/countly-ingestion-ingress-baremetal_setup.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: countly-ingress
  namespace: countly
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - YOUR_HOSTNAME                     # example.count.ly
    secretName: tls-secret
  rules:
  - http:
      paths:
      - backend:
          serviceName: countly-ingestion
          servicePort: 3001
        path: /(i.*)
      - backend:
          serviceName: countly-ingestion
          servicePort: 3001
        path: /(i/bulk.*)
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(i/.*)
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(o.*)
      - backend:
          serviceName: countly-api
          servicePort: 3001
        path: /(o/.*)
      - backend:
          serviceName: countly-frontend
          servicePort: 6001
        path: /(images/.*)
      - backend:
          serviceName: countly-frontend
          servicePort: 6001
        path: /(.*)
